apps/hello/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-echo
  template:
    metadata:
      labels:
        app: hello-echo
    spec:
      containers:
      - name: hello-echo
        image: hashicorp/http-echo:0.2.3
        ports:
        - containerPort: 5678
        args:
        - "-text=$(GREETING)"
---

apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello-echo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
