apps/hello/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress

metadata:
  name: hello
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "hello.sctp-sandbox.com"

spec:
  ingressClassName: nginx
  rules:
  - host: "hello.sctp-sandbox.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
